feat(api): comprehensive Group & Role management API enhancement